2019. 6.28. Reflected new specifications of zStrList and zStrAddrList. [app]
2019. 6.28. Added zeo_stlconv. [app]
2019. 6.28. Added zPH3DFScanSTL, zPH3DFPrintSTL, zPH3DFReadSTL and zPH3DFWriteSTL. [zeo_errmsg, zeo_ph]
2019. 6.28. Debugged _zGJKSimplexClosest. [zeo_col_gjk]
2019. 6.17. Renamed *Clear to *Zero. [zeo_vec2d, zeo_mat2d, zeo_vec3d, zeo_mat3d, zeo_vec6d, zeo_mat6d, zeo_vec3d_pca, zeo_ep, zeo_pointcloud, zeo_elem, zeo_ph, zeo_nurbs, zeo_prim_cyl, zeo_prim_ecyl, zeo_bv_aabb, zeo_bv_obb, zeo_col_gjk, zeo_col_mpr]
2019. 6.14. Renamed *Xfer to *Xform. [zeo_frame, zeo_ph, zeo_nurbs, zeo_prim, zeo_prim_box, zeo_prim_sphere, zeo_prim_cyl, zeo_prim_cone, zeo_prim_ellips, zeo_prim_ecyl, zeo_prim_ph, zeo_prim_nurbs, zeo_shape, zeo_pointcloud, zeo_bv_aabb]
2019. 6.14. Renamed _*Write to _*Print. [zeo_bv_qhull, zeo_col_gjk]
2019. 6.13. Renamed *Read and *Write to *Scan and *Print, respectively. [zeo_color, zeo_optic, zeo_vec2d, zeo_mat2d, zeo_vec3d, zeo_mat3d, zeo_vec3d_list, zeo_vec6d, zeo_mat6d, zeo_frame, zeo_ep, zeo_elem, zeo_ph, zeo_prim, zeo_prim_box, zeo_prim_sphere, zeo_prim_cyl, zeo_prim_cone, zeo_prim_ellips, zeo_prim_ecyl, zeo_shape, zeo_mshape, zeo_shape_list, zeo_bv_aabb, zeo_col_aabbtree, zeo_nurbs, zeo_terra]
2019. 1.30. Merged zeo_triangulate to zeo_elem_list. [zeo_elem_list, zeo_ph]
2019. 1.30. Added _zLoop3DTriangulate and zLoop3DTriangulate. [zeo_triangulate]
2019. 1.30. Added zVec3DAddrListClone. [zeo_vec3d_list]
2019. 1.30. Renamed _zTriangulateNorm to _zLoop3DTriangulateNorm and _zTriangulateCheck to _zLoop3DTriangulateCheck. [zeo_triangulate]
2019. 1.21. Added zMPR and zMPRDepth. [zeo_col, zeo_col_mpr]
2019. 1.21. Abolished _zGJKSupportMapOne and _zGJKSupportMapOnePL, and modified _zGJKSupportMap and _zGJKSupportMapPL to use zVec3DSupportMap and zVec3DListSupportMap, respectively. [zeo_col_gjk]
2019. 1.21. Added zVec3DSupportMap and zVec3DListSupportMap. [zeo_vec3d_list]
2019. 1.18. Added zMat3DIsTol and zMat3DIsTiny. [zeo_mat3d]