@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.3.4
+VERSION=1.3.5
 
 DEPENDENCY="zeda=1.2.4;zm=1.2.4"
