@@ -217,17 +217,17 @@ __EXPORT void zPH3DFPrint(FILE *fp, zPH3D *ph);
 
 /* STL format */
 
-/*! \brief scan and print a 3D polyhedron in ASCII STL format.
- */
-__EXPORT zPH3D *zPH3DFScanSTL(FILE *fp, zPH3D *ph, char name[], size_t namesize);
-#define zPH3DScanSTL(ph,n,s) zPH3DFScanSTL( stdin, (ph), (n), (s) )
-__EXPORT void zPH3DFPrintSTL(FILE *fp, zPH3D *ph, char name[]);
-#define zPH3DPrintSTL(ph,n) zPH3DFPrintSTL( stdout, (ph), (n) )
+/*! \brief read and write a 3D polyhedron in ASCII STL format. */
+__EXPORT zPH3D *zPH3DFReadSTL_ASCII(FILE *fp, zPH3D *ph, char name[], size_t namesize);
+__EXPORT void zPH3DFWriteSTL_ASCII(FILE *fp, zPH3D *ph, char name[]);
 
-/*! \brief read and write a 3D polyhedron in binary STL format.
- */
-__EXPORT zPH3D *zPH3DFReadSTL(FILE *fp, zPH3D *ph, char name[]);
-__EXPORT void zPH3DFWriteSTL(FILE *fp, zPH3D *ph, char name[]);
+/*! \brief read and write a 3D polyhedron in binary STL format. */
+__EXPORT zPH3D *zPH3DFReadSTL_Bin(FILE *fp, zPH3D *ph, char name[]);
+__EXPORT void zPH3DFWriteSTL_Bin(FILE *fp, zPH3D *ph, char name[]);
+
+/*! \brief read and write a 3D polyhedron. */
+__EXPORT zPH3D *zPH3DFReadSTL(FILE *fp, zPH3D *ph, char name[], size_t namesize);
+#define zPH3DFWriteSTL zPH3DFWriteSTL_ASCII
 
 __END_DECLS
 
